Closed Bug 90696 Opened 24 years ago Closed 24 years ago

reflow count manager messages confuse layout regress. tests

Categories

(Core Graveyard :: Viewer App, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bernd_mozilla, Assigned: bernd_mozilla)

References

()

Details

Attachments

(1 file)

quote from a mail from Marc: This line is coming out in normal running of Viewer and Mozilla - I don't know where it is coming from, but it is apparently printing the URI of the page that is being dumped (the previous page). Maybe this is from the change Hyatt made where the old stuff is kept around until the new document has loaded enough to render something... Basically, I think we can ignore it (though I'd rather find it and remove it, or put it in #ifdef DEBUG_hyatt or something). - marc Chris Karnaze wrote: I'm seeing a buch of what appears to inter twining of messages. Is the *** line just a bogus message? +++ file:///s|/mozilla/layout/html/tests/table/bugs/bug2479-4.html: done loading (468 msec) /s|/mozilla/layout/html/tests/table/bugs/bug2479-3.html regression test s:\mozilla\layout\html\tests\table\bugs\verify\bug2479-4.rgd passed Disabling Quirk StyleSheet Enabling Quirk StyleSheet xmlencoding detect- ISO-8859-1 Disabling Quirk StyleSheet +++ file:///s|/mozilla/layout/html/tests/table/bugs/bug2479-5.html: done loading (562 msec) /s|/mozilla/layout/html/tests/table/bugs/bug2479-4.html // *** line frame bbox mismatch: 0,0,10785,20670 vs. 0,0,10935,20670 Node 1: Canvas(-1) 0x42010 0,0,10785,20670, |null attr|-16777216|left: Null top: Null right: Null bottom: Null left: Null top: Null right: Null bottom: Null left: 1[0x1]enum top: 1[0x1]enum right: 1[0x1]enum bottom: 1[0x1]enum left: Null top: Null right: Null bottom: Null left: Null top: Null right: Null bottom: Null 1[0x1]enum 0|100 100 |left: Auto top: Auto right: Auto bottom: Auto Auto 0[0x0]tw Null Auto 0[0x0]tw Null 0 Auto |0 0 0 Normal Normal 0[0x0]tw Normal |0 1 0 0 0 0 0 0 0 0 0 0 |0 0 4 -1 1 |0 0 0 Null Node 2: Canvas(-1) 0x42010 0,0,10935,20670, |null attr|-16777216|left: Null top: Null right: Null bottom: Null left: Null top: Null right: Null bottom: Null left: 1[0x1]enum top: 1[0x1]enum right: 1[0x1]enum bottom: 1[0x1]enum left: Null top: Null right: Null bottom: Null left: Null top: Null right: Null bottom: Null 1[0x1]enum 0|100 100 |left: Auto top: Auto right: Auto bottom: Auto Auto 0[0x0]tw Null Auto 0[0x0]tw Null 0 Auto |0 0 0 Normal Normal 0[0x0]tw Normal |0 1 0 0 0 0 0 0 0 0 0 0 |0 0 4 -1 1 |0 0 0 Null frame bbox mismatch: 120,120,10545,20430 vs. 120,120,10695,20430 Node 1: a bunch more regression test s:\mozilla\layout\html\tests\table\bugs\verify\bug2479-5.rgd failed
according to LXR Chris Waterson last touched the line so should I #ifdef debug_waterson ?
updating QA contact ;)
QA Contact: rickg → attinasi
we have this line in mozilla.exe to ...., so this is not a viewer problem Document file:///C:/temp/background/bug88243a.html loaded successfully Disabling Quirk StyleSheet Enabling Quirk StyleSheet Disabling Quirk StyleSheet /C:/temp/background/bug88243a.html Document file:///C:/temp/background/bug666.html loaded successfully
You can remove it, I don't need to see it! :-)
I think the message Bernd was referring to is a good one (WebCrawler.cpp ln 385) indicating that the load is done - the one we need to get rid of is the one happening in Mozilla and MFCEmbed too, but we cannot find it's source yet. Fortunately, Bernd is on the hunt!
the message comes from the reflow mess(aging).
Summary: viewer messages confuse layout regression testing → reflow count manager messages confuse layout regress. tests
Attached patch patchSplinter Review
Thank you Bernd! sr=attinasi
r=karnaze
fix checked in
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: