reflow count manager messages confuse layout regress. tests bug 90696 r=karnaze sr=attinasi